--- a/CTT-Java/resources/settings.json
+++ b/CTT-Java/resources/settings.json
@@ -1,6 +1,7 @@
 {
-    "class": "10c",
-    "day": "mi",
-    "school": "68766cfg",
-    "path": "resources/tmp/plan.pdf"
+  "class": "10c",
+  "courses": [],
+  "day": "mi",
+  "school": "68766cfg",
+  "path": "resources/tmp/plan.pdf"
 }
