Added more stuff

--- a/CTT-Java/resources/settings.json
+++ b/CTT-Java/resources/settings.json
@@ -1,7 +1,7 @@
 {
   "class": "10c",
   "courses": [],
-  "day": "mi",
+  "day": "mo",
   "school": "68766cfg",
   "path": "resources/tmp/plan.pdf"
 }
