Updatet package.json

--- a/CTT_Final/PC/CTT_electron/package.json
+++ b/CTT_Final/PC/CTT_electron/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "electron .",
     "pack-mac": "electron-packager . CurrentTimeTable --platform=darwin --icon=assets/icons/mac/icon.icns --overwrite --out=pack/",
+    "pack-linux": "electron-packager . CurrentTimeTable --platform=linux --icon=assets/icons/png/icon.png --overwrite --out=pack/",
     "pack-win": "electron-packager . CurrentTimeTable --platform=win32 --arch=ia32,x64 --icon=assets/icons/win/icon.ico --overwrite --out=pack/",
     "build": "electron-builder build"
   },
