Actually Able to detect inputs

--- a/CTT_Final/PC/CTT_electron/package.json
+++ b/CTT_Final/PC/CTT_electron/package.json
@@ -21,6 +21,7 @@
   "build": {
     "mac": {
       "category": "public.app-category.developer-tools",
+      "icon": "assets/icons/mac/icon.icns",
       "target": "dmg"
     }
   }
