--- a/CTT-Java/resources/settings.json
+++ b/CTT-Java/resources/settings.json
@@ -1,7 +1,10 @@
 {
   "class": "10c",
   "courses": [],
-  "day": "mi",
+  "day": "1",
+  "dayText": "fr",
   "school": "68766cfg",
-  "path": "resources/tmp/plan.pdf"
+  "path": "resources/tmp/plan.pdf",
+  "username": "bewe",
+  "password": "100404"
 }
