--- a/CTT_Final/PC/CTT_electron/package.json
+++ b/CTT_Final/PC/CTT_electron/package.json
@@ -26,8 +26,11 @@
     }
   },
   "dependencies": {
+    "axios": "^0.19.0",
+    "download-pdf": "^0.1.6",
     "pdf-parse": "^1.1.1",
     "pdfreader": "^1.0.6",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "textract": "^2.5.0"
   }
 }
