Did stuff again

--- a/CTT_Final/PC/CTT_electron/package.json
+++ b/CTT_Final/PC/CTT_electron/package.json
@@ -24,5 +24,9 @@
       "icon": "assets/icons/mac/icon.icns",
       "target": "dmg"
     }
+  },
+  "dependencies": {
+    "encoding": "^0.1.12",
+    "utf-8": "^2.0.0"
   }
 }
