--- a/CTT_Final/PC/CTT_electron/package.json
+++ b/CTT_Final/PC/CTT_electron/package.json
@@ -5,15 +5,26 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "pack-mac": "electron-packager . CurrentTimeTable --platform=darwin --icon=assets/icons/mac/icon.icns --overwrite --out=pack/",
-    "pack-linux": "electron-packager . CurrentTimeTable --platform=linux --icon=assets/icons/png/icon.png --overwrite --out=pack/",
-    "pack-win": "electron-packager . CurrentTimeTable --platform=win32 --arch=ia32,x64 --icon=assets/icons/win/icon.ico --overwrite --out=pack/"
+    "pack:mac": "electron-packager . CurrentTimeTable --platform=darwin --icon=assets/icons/mac/icon.icns --overwrite --out=pack/",
+    "pack:linux": "electron-packager . CurrentTimeTable --platform=linux --icon=assets/icons/png/icon.png --overwrite --out=pack/",
+    "pack:win": "electron-packager . CurrentTimeTable --platform=win32 --arch=ia32,x64 --icon=assets/icons/win/icon.ico --overwrite --out=pack/",
+    "build:mac": "electron-builder build --pd=pack/CurrentTimeTable-darwin-x64",
+    "build:linux": "electron-builder build --pd=pack/CurrentTimeTable-linux-x64",
+    "build:win": "electron-builder build --pd=pack/CurrentTimeTable-win32-x64",
+    "build:win32": "electron-builder build --pd=pack/CurrentTimeTable-win32-ia32"
   },
   "keywords": [],
   "author": "Benedict Weis",
   "license": "MIT",
   "devDependencies": {
     "electron": "^7.0.0",
+    "electron-builder": "^21.2.0",
     "electron-packager": "^14.1.0"
+  },
+  "build": {
+    "win": {
+      "icon": "assets/icons/win/icon.ico",
+      "target": ["nsis","portable"]
+    }
   }
 }
