--- a/CTT_Final/PC/CTT_electron/resources/settings.json
+++ b/CTT_Final/PC/CTT_electron/resources/settings.json
@@ -1,8 +1,8 @@
 {
   "class": "10c",
   "courses": [],
-  "day": "0",
-  "dayText": "mo",
+  "day": "1",
+  "dayText": "fr",
   "school": "68766cfg",
   "path": "resources/tmp/plan.pdf",
   "username": "bewe",
