Changed the Java backend

--- a/CTT-Java/resources/settings.json
+++ b/CTT-Java/resources/settings.json
@@ -1,10 +1,8 @@
 {
   "class": "10c",
   "courses": [],
-  "day": "1",
-  "dayText": "fr",
   "school": "68766cfg",
-  "path": "resources/tmp/plan.pdf",
+  "path": "resources/tmp",
   "username": "bewe",
   "password": "100404"
 }
